Closed
Bug 1405708
Opened 8 years ago
Closed 4 years ago
Mouse over button with a border radius causes it to turn transparent under linux
Categories
(Core :: Layout: Form Controls, defect, P5)
Tracking
()
RESOLVED
FIXED
89 Branch
People
(Reporter: robert, Assigned: emilio)
References
Details
Attachments
(2 files)
User Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/62.0.3202.18 Safari/537.36
Steps to reproduce:
Test case: https://jsfiddle.net/tc9h5fvj/
Actual results:
Mousing over the button causes it to turn transparent.
This only happens under Linux.
Tested with 56.0 and also 58.0a1
Expected results:
The button should "highlight" in a brighter color on mouse over.
Removing the "border-radius" CSS style causes the expected behavior to happen.
Reporter | ||
Comment 1•8 years ago
|
||
Seems to be related to any border changes, here is another test case where simply setting "border: 0;" will cause the odd behavior: https://jsfiddle.net/nj75fa7L/
Updated•8 years ago
|
Component: Untriaged → Layout: Form Controls
OS: Unspecified → Linux
Product: Firefox → Core
Comment 2•8 years ago
|
||
Thanks for filing. Please specify distro and GTK version.
Reporter | ||
Comment 3•8 years ago
|
||
Distro: Gentoo
gtk+ versions installed:
2.24.31-r1
3.22.19
Let me know if there is any other info you need.
Flags: needinfo?(robert)
Comment 4•7 years ago
|
||
I am seeing this also.
Distro: Xubuntu 17.10
GTK versions: 2.24.31-2ubunt, 3.22.25-0ubunt
Reporter | ||
Comment 5•7 years ago
|
||
Thanks @Jonathan Hefner. Glad to hear it's just not me.
I am also still seeing this with:
Firefox 60.0 (Build ID 20180514125501)
gtk+ versions installed: 2.24.32 and 3.22.30
Comment 6•4 years ago
|
||
Marking this as new as it was recently reproduced in Bug 1703381.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Assignee | ||
Comment 9•4 years ago
|
||
It seems we get transparent in Adwaita otherwise, which causes this.
This is fixed on nightly via the non-native theme, which spoofs these
colors for contrast, but seems worth fixing anyways.
Updated•4 years ago
|
Assignee: nobody → emilio
Status: NEW → ASSIGNED
Comment 10•4 years ago
|
||
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/e265600c1162
Fallback -moz-buttonhoverface to the regular button background if transparent. r=stransky
Comment 11•4 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
status-firefox89:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•