Bug 1405708 - Fallback -moz-buttonhoverface to the regular button background if transparent. r=stransky

It seems we get transparent in Adwaita otherwise, which causes this.

This is fixed on nightly via the non-native theme, which spoofs these
colors for contrast, but seems worth fixing anyways.

Differential Revision: https://phabricator.services.mozilla.com/D111812